# acmweb

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile  build.rs
backend/proto/: admin.proto  student.proto  userposts.proto
backend/src/: admin.rs  auth.rs  dbconn.rs  languages.rs  main.rs  projects.rs  student.rs  user.rs  userposts.rs
frontend/: .gitignore  .gitmodules  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: ACM.ts  app.d.ts  app.html  app.postcss
frontend/src/components/: Card.svelte
frontend/src/components/mainLayout/: ButtonMainLayout.svelte
frontend/src/components/schemas/: registerFormSchema.ts
frontend/src/components/shared/side_bar/: store.ts  (+9 more)
frontend/src/lib/: translations.ts
frontend/src/lib/components/: types.ts
frontend/src/lib/locales/: de.json  en.json  fr.json  ja.json  pt.json  zh.json
frontend/src/lib/models/: enums.ts  types.ts
frontend/src/lib/schemas/: loginSchema.ts  productSchema.ts  userSchema.ts
frontend/src/lib/services/: service.ts
frontend/src/lib/stores/: globalStore.ts
frontend/src/models/: types.ts
frontend/src/models/product/: types.ts
frontend/src/models/user/: types.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
frontend/src/routes/posts/: +page.svelte
frontend/src/routes/projects/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/signup/: +page.svelte
frontend/src/stores/: alertStore.ts  globalStores.ts
frontend/wasm-test/: Cargo.toml  build.rs  modulize.js
frontend/wasm-test/protos/: auth.proto  languages.proto  projects.proto
frontend/wasm-test/src/: lib.rs
surrealdb-data/: 000686.sst  000693.sst  000699.sst  000707.sst  000715.sst  000723.sst  000731.sst  000739.sst  000747.sst  000755.sst  000762.sst  000768.sst  000776.sst  000784.sst  000792.sst  000800.sst  000915.sst  000917.sst  000925.sst  000933.sst  000941.sst  000949.sst  000957.sst  000965.sst  000973.sst  000981.sst  000989.sst  001041.sst  001043.sst  001051.sst  001058.sst  001064.sst  001072.sst  001079.sst  001084.sst  001089.sst  001095.sst  IDENTITY  MANIFEST-000804  MANIFEST-000993  (+2 more)
(+19 files in other folders)
