[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "*"
tracing-subscriber = "*"
tracing-appender = "*"
tonic = "*"
tokio-stream = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-web = "*"
tonic-reflection = "*"
tonic-health = "*"
rand = "*"
redis = { version = "*", features = ["tokio-comp"] }
once_cell = "*"
surrealdb = { version = "*", features = [] }
serde = "*"
serde_json = "*"
ureq = "3.0.5"
reqwest = "0.12.12"
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
uuid = "1.13.2"


[build-dependencies]
tonic-build = "*"
async-trait = "*"
