[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "*"
tracing-subscriber = "*"
tracing-appender = "*"
tonic = "*"
tokio-stream = "*"
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tonic-web = "*"
tonic-reflection = "*"
tonic-health = "*"
rand = "*"
redis = { version = "*", features = ["tokio-comp"] }
once_cell = "*"
surrealdb = { version = "*", features = [] }
serde = "*"
serde_json = "*"
ureq = "*"
reqwest = "*"
jsonwebtoken = "*"
chrono = "*"
uuid = "*"
tower-http = { version = "*", features = ["cors"] }


[build-dependencies]
tonic-build = "*"
async-trait = "*"
